<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_defaultTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_recipesName"
        android:layout_width="90dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/recipe_name"
        app:layout_constraintBottom_toTopOf="@+id/btn_addingRecipe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="101dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ingredients"
        app:layout_constraintEnd_toStartOf="@+id/btn_addingRecipe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_addingRecipe"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="615dp"
        android:text="@string/btn_addRecipetoMyPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tv_recipesName" />

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="576dp"
        android:text="@string/tv_ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_instructions"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ingredients"
        app:layout_constraintTop_toBottomOf="@+id/btn_addingRecipe" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="160dp"
        android:layout_height="479dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_vegan"
        app:layout_constraintEnd_toStartOf="@+id/scrollView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredients">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="214dp"
        android:layout_height="479dp"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_vegan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/scrollView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/tv_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_vegan"
        app:layout_constraintBottom_toTopOf="@+id/tv_glutenFree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3" />

    <TextView
        android:id="@+id/tv_glutenFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_glutenFree"
        app:layout_constraintBottom_toTopOf="@+id/tv_dairyFree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vegan" />

    <TextView
        android:id="@+id/tv_dairyFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_dairyFree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_glutenFree" />
</androidx.constraintlayout.widget.ConstraintLayout>
