<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_defaultTitle"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_recipesName"
        android:layout_width="238dp"
        android:layout_height="40dp"
        android:layout_marginStart="24dp"
        android:gravity="center|center_horizontal"
        android:text="@string/recipe_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.919"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="101dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ingredients"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_addingRecipe"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:text="@string/btn_addRecipetoMyPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/tv_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="576dp"
        android:text="@string/tv_ingredients"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="4dp"
        android:text="@string/tv_instructions"
        app:layout_constraintBottom_toTopOf="@+id/sv_instructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_ingredients"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.934" />

    <ScrollView
        android:id="@+id/sv_ingredients"
        android:layout_width="168dp"
        android:layout_height="449dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_vegan"
        app:layout_constraintEnd_toStartOf="@+id/sv_instructions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ingredients">

        <LinearLayout
            android:id="@+id/IngLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_ingredientsOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

    <ScrollView
        android:id="@+id/sv_instructions"
        android:layout_width="188dp"
        android:layout_height="449dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="112dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/InsLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_instructionsOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_vegan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="151dp"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="220dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tv_vegan"
        app:layout_constraintBottom_toTopOf="@+id/tv_glutenFree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sv_ingredients" />

    <TextView
        android:id="@+id/tv_glutenFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="190dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_glutenFree"
        app:layout_constraintBottom_toTopOf="@+id/tv_dairyFree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vegan" />

    <TextView
        android:id="@+id/tv_dairyFree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="198dp"
        android:layout_marginBottom="8dp"
        android:text="@string/tv_dairyFree"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_glutenFree" />

    <TextView
        android:id="@+id/tv_recipeAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recipeAdded"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.852"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.112" />
</androidx.constraintlayout.widget.ConstraintLayout>